tests/fail/no_identifier.rs
concat_idents::concat_idents!(fn_name =  {
    fn fn_name() {
        /* idents cannot be nothing */
    }
});

fn main() {}
