tests/fail/no_identifier.stderr
error: Expected at least one identifier
 --> $DIR/no_identifier.rs:1:42
  |
1 | concat_idents::concat_idents!(fn_name =  {
  |                                          ^
